Fix horizontal scrolling overflow
Fix horizontal scrolling overflow not working when wrap disabled

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -21,8 +21,7 @@ body {
 
 #container {
     flex-direction: column;
-    height: inherit;
-    width: inherit;
+    overflow: auto;
 }
 
 a {
